[package]
name = "bestellenbijgerjan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rocket = { version = "0.5.0", features = ["json"] }

[dependencies.rocket_dyn_templates]
version = "0.1.0"
features = ["handlebars"]